[gd_scene load_steps=4 format=3 uid="uid://sppciyl2xjey"]

[ext_resource type="Script" path="res://Scripts/ModsPanel.gd" id="1"]
[ext_resource type="Theme" uid="uid://cp2u1kgj60ic" path="res://Resources/default_theme.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://ddf2xjwcht77u" path="res://Scenes/CloseButton.tscn" id="5"]

[node name="ModsPanel" type="Panel"]
custom_minimum_size = Vector2(576, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -120.0
offset_right = 448.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("3")
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 38)
layout_mode = 0
anchor_right = 1.0
offset_bottom = 24.0
size_flags_vertical = 3
text = "MODS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_left = 32.0
offset_top = 53.0
offset_right = 200.0
offset_bottom = 75.0
size_flags_horizontal = 3
text = "NAME"

[node name="Version" type="Label" parent="."]
layout_mode = 2
offset_left = 244.0
offset_top = 52.0
offset_right = 340.0
offset_bottom = 74.0
size_flags_horizontal = 3
text = "VERSION"

[node name="Author" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_left = 350.0
offset_top = 52.0
offset_right = 450.0
offset_bottom = 74.0
text = "AUTHOR"

[node name="Description" type="Label" parent="."]
layout_mode = 2
offset_left = 476.0
offset_top = 52.0
offset_right = 652.0
offset_bottom = 74.0
text = "DESCRIPTION"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 78.0
offset_right = -24.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton" parent="." instance=ExtResource("5")]
layout_mode = 1
offset_left = -32.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 32.0

[node name="PopupBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -376.0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0.564706)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="Wiki" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Modding Wiki"

[node name="OpenModsFolder" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "OPEN_MODS_FOLDER"

[connection signal="close_button_pressed" from="TextureButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Wiki" to="." method="_on_wiki_pressed"]
[connection signal="pressed" from="HBoxContainer/OpenModsFolder" to="." method="_on_open_mods_folder_pressed"]
